--- a/product-manager.html
+++ b/product-manager.html
@@ -40,8 +40,20 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://boards.greenhouse.io/warbyparker/jobs/1940731'>Job Application for Product Manager, Ecommerce Platform at Warby Parker</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/goldstonepartners/743999698659538-associate-product-owner'>Goldstone Partners, Inc. Associate Product Owner | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/trunkclub/jobs/1945608'>Job Application for Sr Product Manager at Trunk Club</a></h5> 
+<p><span class="badge badge-light">Chicago, IL  ?Boston Chicago Los Angeles New York City</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/asana/jobs/1940638'>Job Application for Product Designer at Asana</a></h5> 
+<p><span class="badge badge-light">New York City</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/warbyparker/jobs/1940731'>Job Application for Product Manager, Ecommerce Platform at Warby Parker</a></h5> 
+<p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/vpTech/a8bfca33-f3e1-428c-a998-1721f8c718ab'>vpTech - Product owner - Service manager</a></h5> 
@@ -158,11 +170,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/recurly/0df41d98-6ed5-4e07-92f5-e6c5eb47d7da'>Recurly - Technical Data Product Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/recurly/0df41d98-6ed5-4e07-92f5-e6c5eb47d7da'>Recurly - Technical Data Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e585283'>Stellenangebot: Product Owner (m/w/d) (D?sseldorf) ? dasauge? Stellenmarkt</a></h5> 
+<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e585283'>Stellenangebot: Product Owner (m/w/d) (D?sseldorf) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -194,7 +206,7 @@
 <p><span class="badge badge-light">Seattle, WA  San Francisco Palo Alto Seattle New York City</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/connectedfitness/jobs/1939963'>Job Application for Product Designer at Under Armour </a></h5> 
+<h5><a href='https://boards.greenhouse.io/connectedfitness/jobs/1939963'>Job Application for Product Designer at Under Armour </a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -202,7 +214,7 @@
 <p><span class="badge badge-light">Berkeley, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://elevate-security.breezy.hr/p/6cb3ed84968b-senior-product-manager-integrations'>Senior Product Manager (Integrations) at Elevate Security</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://elevate-security.breezy.hr/p/6cb3ed84968b-senior-product-manager-integrations'>Senior Product Manager (Integrations) at Elevate Security</a></h5> 
 <p><span class="badge badge-light">Montreal, QC</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -214,11 +226,11 @@
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/sequoia/6f2fffe3-c2e7-4082-8a33-d0d886353200'>Sequoia Consulting Group - Salesforce Product Owner</a></h5> 
+<h5><a href='https://jobs.lever.co/sequoia/6f2fffe3-c2e7-4082-8a33-d0d886353200'>Sequoia Consulting Group - Salesforce Product Owner</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/miteksystems-2/cc5b14b0-a04c-441e-8dba-3980b560c364'>Mitek Systems - Senior Product Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/miteksystems-2/cc5b14b0-a04c-441e-8dba-3980b560c364'>Mitek Systems - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light">San Diego</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -226,7 +238,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/coupang/jobs/1829366'>Job Application for Principal, Product Owner (FinTech Business & Systems) at Coupang</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/coupang/jobs/1829366'>Job Application for Principal, Product Owner (FinTech Business & Systems) at Coupang</a></h5> 
 <p><span class="badge badge-light">Seoul</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -262,7 +274,7 @@
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/discord/jobs/4002985002'>Job Application for Product Manager, Internal Products at Discord</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/discord/jobs/4002985002'>Job Application for Product Manager, Internal Products at Discord</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -274,7 +286,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/axon/81e80557-ff55-402d-895b-438bbdda1141'>Axon - Principal Product Manager - Axon Records</a></h5> 
+<h5><a href='https://jobs.lever.co/axon/81e80557-ff55-402d-895b-438bbdda1141'>Axon - Principal Product Manager - Axon Records</a></h5> 
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -326,7 +338,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://vizrt.applytojob.com/apply/dEdGNsUPpl/Product-Manager-Pro-AV-NewTek'>Product Manager, Pro A/V (NewTek) - Vizrt - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://vizrt.applytojob.com/apply/dEdGNsUPpl/Product-Manager-Pro-AV-NewTek'>Product Manager, Pro A/V (NewTek) - Vizrt - Career Page</a></h5> 
 <p><span class="badge badge-light">San Antonio, TX</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -386,7 +398,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/upgrade/0ab79d4c-5943-4181-a929-d15bf578bb45'>Upgrade - Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/upgrade/0ab79d4c-5943-4181-a929-d15bf578bb45'>Upgrade - Product Manager</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -422,7 +434,7 @@
 <p><span class="badge badge-light">?le-de-France, France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698595134-product-manager-mkg'>Ubisoft Product Manager MKG | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698595134-product-manager-mkg'>Ubisoft Product Manager MKG | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Montreal, Canada  Montreal</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -430,24 +442,12 @@
 <p><span class="badge badge-light">?le-de-France, France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/digitaltrends/jobs/4429989002'>Job Application for Product Manager at Digital Trends</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/digitaltrends/jobs/4429989002'>Job Application for Product Manager at Digital Trends</a></h5> 
 <p><span class="badge badge-light">Portland, OR  ?  Portland, Oregon New York City Chicago Los Angeles</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://kiperformance.join.com/jobs/474164-product-owner-m-f-x'>Job @ KI Group (Cologne): Product Owner (m/f/x) | JOIN</a></h5> 
 <p><span class="badge badge-light">Cologne, Germany</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/ziprecruiter/jobs/1938474'>Job Application for Product Manager  at ZipRecruiter</a></h5> 
-<p><span class="badge badge-light">Santa Monica, CA</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/ziprecruiter/jobs/1940144'>Job Application for Sr. Product Manager  at ZipRecruiter</a></h5> 
-<p><span class="badge badge-light">Santa Monica, CA</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/ziprecruiter/jobs/1940150'>Job Application for Sr. Product Manager  at ZipRecruiter</a></h5> 
-<p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 
